Se agrega icono en barra de navegación para cambio de modo claro-oscuro

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
                 <li class="navegacion__elemento"><a href="#proyectos">Proyectos</a></li>
                 <li class="navegacion__elemento"><a href="#contacto">Contacto</a></li>
             </ul>
+            <div class="navegacion_icon">
+            <i class="fa-solid fa-sun" id="theme-icon"></i>
+            </div>
+            
+
         </nav>
     </header>
 
@@ -46,7 +51,7 @@
 
                 <a href="mailto:cris629.cso@gmail.com" target="_blank" title="Enviar un correo a cris629.cso@gmail.com"><i class="fa-regular fa-envelope"></i></a>
 
-                <a href="#"><i class="fas fa-sun"></i></a>
+                
             </div>
         </div>
     </section>
