Se elimina etiqueta br y se estructura mejor el index

--- a/index.html
+++ b/index.html
@@ -43,19 +43,18 @@
         <div class="presentacion__contenedor">
             <h2 class="presentacion__titulo">Hola, mi nombre es Yuber Cristian Sánchez Ospina y me especializo en la creación de páginas web dinámicas. <br>
             <br>Tengo la habilidad de descomponer problemas complejos en subtareas más pequeñas, lo que permite desarrollar soluciones más eficaces y libres de errores</h2>
-
+    <!--Redes sociales de contacto-->
             <div class="redes">
                 <a href="https://www.linkedin.com/in/yubercristiansanchezospina" target="_blank" title="Visita mi perfil de LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
 
                 <a href="https://github.com/Cris-San" target="_blank" title="Visita mi repositorio en GitHub"><i class="fa-brands fa-github"></i></a>
 
                 <a href="mailto:cris629.cso@gmail.com" target="_blank" title="Enviar un correo a cris629.cso@gmail.com"><i class="fa-regular fa-envelope"></i></a>
-
-                
             </div>
         </div>
     </section>
-    <br>
+
+    
     <!-- Sección sobre mí -->
     <section class="sobre-mi" id="sobre-mi">
         <h2 class="sobre-mi__titulo">Sobre mí</h2>
