--- a/index.html
+++ b/index.html
@@ -93,28 +93,32 @@
         <h2 class="habilidades__titulo">Habilidades</h2>
         <ul class="habilidades__lista">
             <li class="habilidades__elemento">
-                <img class="habilidades__icono" src="assets/html.png" alt="HTML">
-                <p class="habilidades__nombre">HTML 5</p>
+                <i class="fab fa-html5 icono_html"></i>
+                <p class="habilidades__nombre">HTML</p>
             </li>
             <li class="habilidades__elemento">
-                <img class="habilidades__icono" src="assets/js_icon.png" alt="JavaScript">
+                <i class="fab fa-js icono_js"></i>
                 <p class="habilidades__nombre">JavaScript</p>
             </li>
             <li class="habilidades__elemento">
-                <img class="habilidades__icono" src="assets/php_icon.png" alt="PHP">
+                <i class="fab fa-php icono_php"></i>
                 <p class="habilidades__nombre">PHP</p>
             </li>
             <li class="habilidades__elemento">
-                <img class="habilidades__icono" src="assets/nodejs_icon.png" alt="Node.js">
+                <i class="fab fa-node icono_node"></i>
                 <p class="habilidades__nombre">Node.js</p>
             </li>
             <li class="habilidades__elemento">
-                <img class="habilidades__icono" src="assets/react_icon.png" alt="React">
+                <i class="fab fa-react icono_react"></i>
                 <p class="habilidades__nombre">React</p>
             </li>
             <li class="habilidades__elemento">
-                <img class="habilidades__icono" src="assets/css_icon.png" alt="CSS">
+                <i class="fab fa-css3-alt icono_css"></i>
                 <p class="habilidades__nombre">CSS</p>
+            </li>
+            <li class="habilidades__elemento">
+                <i class="fas fa-database icono_mysql"></i>
+                <p class="habilidades__nombre nombre_mysql">MySQL</p>
             </li>
         </ul>
     </section>
