Se crea nueva sección para habilidades blandas.

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
         </p>
     </section>
 
-    <!-- Sección de Habilidades -->
+    <!-- Sección de Habilidades Técnicas-->
     <section class="habilidades" id="habilidades">
-        <h2 class="habilidades__titulo">Habilidades</h2>
+        <h2 class="habilidades__titulo">Habilidades Técnicas</h2>
         <ul class="habilidades__lista">
             <li class="habilidades__elemento">
                 <i class="fab fa-html5 icono_html"></i>
@@ -119,6 +119,28 @@
             <li class="habilidades__elemento">
                 <i class="fas fa-database icono_mysql"></i>
                 <p class="habilidades__nombre nombre_mysql">MySQL</p>
+            </li>
+        </ul>
+    </section>
+
+    <!-- Sección de Habilidades Blandas-->
+    <section class="habilidades" id="habilidades-blandas">
+        <h2 class="habilidades__titulo">Habilidades Blandas</h2>
+        <ul class="habilidades__lista">
+            <li class="habilidades__elemento">
+                <p class="habilidades__nombre">Comunicación efectiva</p>
+            </li>
+            <li class="habilidades__elemento">
+                <p class="habilidades__nombre">Trabajo en equipo</p>
+            </li>
+            <li class="habilidades__elemento">
+                <p class="habilidades__nombre">Resolución de problemas</p>
+            </li>
+            <li class="habilidades__elemento">
+                <p class="habilidades__nombre">Adaptabilidad</p>
+            </li>
+            <li class="habilidades__elemento">
+                <p class="habilidades__nombre">Gestión del tiempo</p>
             </li>
         </ul>
     </section>
