--- a/index.html
+++ b/index.html
@@ -128,18 +128,23 @@
         <h2 class="habilidades__titulo">Habilidades Blandas</h2>
         <ul class="habilidades__lista">
             <li class="habilidades__elemento">
+                <i class="fas fa-comments habilidades__icono icono_comunicacion"></i>
                 <p class="habilidades__nombre">Comunicación efectiva</p>
             </li>
             <li class="habilidades__elemento">
+                <i class="fas fa-users habilidades__icono icono_equipo"></i>
                 <p class="habilidades__nombre">Trabajo en equipo</p>
             </li>
             <li class="habilidades__elemento">
+                <i class="fas fa-lightbulb habilidades__icono icono_problemas"></i>
                 <p class="habilidades__nombre">Resolución de problemas</p>
             </li>
             <li class="habilidades__elemento">
+                <i class="fas fa-sync-alt habilidades__icono icono_adaptabilidad"></i>
                 <p class="habilidades__nombre">Adaptabilidad</p>
             </li>
             <li class="habilidades__elemento">
+                <i class="fas fa-clock habilidades__icono icono_tiempo"></i>
                 <p class="habilidades__nombre">Gestión del tiempo</p>
             </li>
         </ul>
