Se [200~ñaden clases para iconos en la seccion habilidades.

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 
         <p class="sobre-mi__texto">Tengo un sólido manejo de software relevante para mi carrera, así como una habilidad innata para la resolución de problemas y el trabajo en equipo. <br> Soy autodidacta y tengo una gran capacidad de aprendizaje, lo que me permite adaptarme rápidamente a nuevas tecnologías y entornos laborales.
 
-            <div class="icons_equipo">
-                <i class="fa-solid fa-users"></i>
+            <div class="icons_habilidad">
+                <i class="fas fa-brain"></i>
             </div>
         </p>
 
@@ -89,35 +89,35 @@
     </section>
 
     <!-- Sección de Habilidades Técnicas-->
-    <section class="habilidades" id="habilidades">
+    <section class="habilidades" id="habilidades-tecnicas">
         <h2 class="habilidades__titulo">Habilidades Técnicas</h2>
         <ul class="habilidades__lista">
             <li class="habilidades__elemento">
-                <i class="fab fa-html5 icono_html"></i>
+                <i class="fab fa-html5 icono_html habilidades__icono"></i>
                 <p class="habilidades__nombre">HTML</p>
             </li>
             <li class="habilidades__elemento">
-                <i class="fab fa-js icono_js"></i>
+                <i class="fab fa-js icono_js habilidades__icono"></i>
                 <p class="habilidades__nombre">JavaScript</p>
             </li>
             <li class="habilidades__elemento">
-                <i class="fab fa-php icono_php"></i>
+                <i class="fab fa-php icono_php habilidades__icono"></i>
                 <p class="habilidades__nombre">PHP</p>
             </li>
             <li class="habilidades__elemento">
-                <i class="fab fa-node icono_node"></i>
+                <i class="fab fa-node icono_node habilidades__icono"></i>
                 <p class="habilidades__nombre">Node.js</p>
             </li>
             <li class="habilidades__elemento">
-                <i class="fab fa-react icono_react"></i>
+                <i class="fab fa-react icono_react habilidades__icono"></i>
                 <p class="habilidades__nombre">React</p>
             </li>
             <li class="habilidades__elemento">
-                <i class="fab fa-css3-alt icono_css"></i>
+                <i class="fab fa-css3-alt icono_css habilidades__icono"></i>
                 <p class="habilidades__nombre">CSS</p>
             </li>
             <li class="habilidades__elemento">
-                <i class="fas fa-database icono_mysql"></i>
+                <i class="fas fa-database icono_mysql habilidades__icono"></i>
                 <p class="habilidades__nombre nombre_mysql">MySQL</p>
             </li>
         </ul>
